# bindev

./: .com.apple.backupd.mdmv238468468  .com.apple.backupd.mdmv238468585  .com.apple.backupd.mdmv238468605  .com.apple.backupd.mdmv238514265  .com.apple.backupd.mdmv238639088  .gitignore  Brewfile  Makefile  README.md  install  pypirm  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypirm.yaml
backup/: dev
include/man/: -SYNOPSIS-OPTIONS_Information.adoc  ===ARGUMENTS-Information.adoc  ===ENVIRONMENT-Output.adoc  ARGUMENTS-Information.adoc  OPTIONS-Output.adoc  REPOSITORY-COPYING.adoc  SYNOPSIS-ARGUMENTS_Information.adoc  template.adoc
scratches/: desc-func.sh
share/man/man1/: bats.sh.1  bats::description.1  genman.1  jbeval.1  semver.1
share/man/man7/: bats.sh.7  semver.7
src/man/: bats.sh.7.adoc  genman.1.adoc  semver.adoc
tests/: bats.bats  genman.bats  semver.bats
tests/helpers/: test_helper.bash
tests/repo/: README.adoc
tests/repo/src/man/: repo_test.sh.7.adoc  repo_test_function.1.adoc  repo_test_main.adoc
