[metadata]
name = bindev

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
  pypi-cleanup

[options.data_files]
bin =
  bin/*
etc/bash_completion.d =
  etc/bash_completion.d/*
include/man =
  include/man/*
share/man/man1 =
  share/man/man1/*
share/bashpro =
  share/bashpro/*
